@@ -33,8 +33,8 @@
     <epp:phrase id="eprint_typename_artefact">Artefact</epp:phrase>
     <epp:phrase id="eprint_optdetails_type_artefact">An artist's artefact or work product.</epp:phrase>
 
-    <epp:phrase id="eprint_typename_exhibition">Exhibition</epp:phrase>
-    <epp:phrase id="eprint_optdetails_type_exhibition">An artists exhibition or site specific performance-based deposit.</epp:phrase>
+    <epp:phrase id="eprint_typename_exhibition">Show/Exhibition</epp:phrase>
+    <epp:phrase id="eprint_optdetails_type_exhibition">An artist's exhibition or site specific performance-based deposit.</epp:phrase>
 
     <epp:phrase id="eprint_typename_composition">Composition</epp:phrase>
     <epp:phrase id="eprint_optdetails_type_composition">A musical composition.</epp:phrase>
@@ -43,7 +43,7 @@
     <epp:phrase id="eprint_optdetails_type_performance">Performance of a musical event.</epp:phrase>
 
     <epp:phrase id="eprint_typename_image">Image</epp:phrase>
-    <epp:phrase id="eprint_optdetails_type_image">A digitised photograph or visual image.</epp:phrase>
+    <epp:phrase id="eprint_optdetails_type_image">A digital photograph or visual image.</epp:phrase>
 
     <epp:phrase id="eprint_typename_video">Video</epp:phrase>
     <epp:phrase id="eprint_optdetails_type_video">A digital video.</epp:phrase>
